--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -13,6 +13,7 @@
         <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="css/customstyles.css" rel="stylesheet" />
         <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
@@ -25,6 +26,7 @@
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Portfolio</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#signup">Contact</a></li>
+                        <!DOCTYPE html>
                     </ul>
                 </div>
             </div>
@@ -41,10 +43,15 @@
             </div>
         </header>
         <!-- About-->
-        <section class="about-section text-center" id="about">
+        <section class="about-section text-left" id="about">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 mx-auto">
+                        <!-- <div class="card">
+                            <img src="assets/img/NatalieTarnming.jpg" alt="Card Back">
+                            <img src="assets/img/NatalieTarnmin.jpg" class="img-top" alt="Card Front">
+                        </div> -->
+                        <div class="card"></div>
                         <h2 class="text-white mb-4">About Me</h2>
                         <p class="text-white-50">Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
                     </div>
