change home desc, made avatar align with words in about

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -37,7 +37,7 @@
                 <div class="mx-auto text-center">
                     <h2 class="text-white-50 mx-auto mt-2 mb-2">Hi, my name is</h2>
                     <h1 class="mx-auto my-0 text-uppercase">Natalie Tarn</h1>
-                    <h2 class="text-white-50 mx-auto mt-2 mb-5">I'm a software engineer with a passion for AI/ML and coding for the planet.</h2>
+                    <h2 class="text-white-50 mx-auto mt-2 mb-5">I'm a junior at Duke University and a software engineer with a passion for AI/ML and the planet.</h2>
                     <a class="btn btn-primary js-scroll-trigger" href="#signup">Get In Touch</a>
                 </div>
             </div>
@@ -51,9 +51,12 @@
                             <img src="assets/img/NatalieTarnming.jpg" alt="Card Back">
                             <img src="assets/img/NatalieTarnmin.jpg" class="img-top" alt="Card Front">
                         </div> -->
-                        <div class="card"></div>
+                        <div class="pf"></div>
                         <h2 class="text-white mb-4">About Me</h2>
-                        <p class="text-white-50">Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
+                        <p class="text-white-50">I am a learner that grows in challenging work environments. I chose computer science and biology to help people and the planet, whether it's <a href="#projects"> digitalizing the collection of bird population data </a> or identifying energy infrastructures through computer vision.
+                        Here are a few technologies I’ve been working with recently: The theme is open source, and you can use it for any purpose, personal or commercial.
+                        asdfasdfasdfasdfasfd 
+                        </p>
                     </div>
                 </div>
                 <img class="img-fluid" src="assets/img/ipad.png" alt="" />
