--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -59,7 +59,6 @@
                         </p>
                     </div>
                 </div>
-                <img class="img-fluid" src="assets/img/ipad.png" alt="" />
             </div>
         </section>
         <!-- Projects-->
@@ -70,8 +69,10 @@
                     <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/bg-masthead.jpg" alt="" /></div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
-                            <h4>Shoreline</h4>
-                            <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
+                            <h4>Front End at Google</h4>
+                            <p class="text-black-50 mb-0">Developed this portfolio, Implemented a web application that does X, Y and Z.</p>
+                            <hr class="d-none d-lg-block mb-0 ml-0" />
+                            
                         </div>
                     </div>
                 </div>
@@ -155,7 +156,7 @@
                     </div>
                 </div>
                 <div class="social d-flex justify-content-center">
-                    <a class="mx-2" href="#!"><i class="fab fa-twitter"></i></a><a class="mx-2" href="#!"><i class="fab fa-facebook-f"></i></a><a class="mx-2" href="#!"><i class="fab fa-github"></i></a>
+                    <a class="mx-2" href="https://www.linkedin.com/in/natalie-tarn"><i class="fab fa-linkedin-in"></i>/a><a class="mx-2" href="mailto:tarn.natalie@gmail.com"><i class="fas fa-envelope"></i></a><a class="mx-2" href="https://github.com/ntarn"><i class="fab fa-github"></i></a>
                 </div>
             </div>
         </section>
