address jiehua review comments and cleanup minor detail on website

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -51,7 +51,7 @@
                             <img src="assets/img/NatalieTarnming.jpg" alt="Card Back">
                             <img src="assets/img/NatalieTarnmin.jpg" class="img-top" alt="Card Front">
                         </div> -->
-                        <div class="pf"></div>
+                        <div class="pfpic"></div>
                         <h2 class="text-white mb-4">About Me</h2>
                         <p class="text-white-50">I am a learner that grows in challenging work environments. I chose computer science and biology to help people and the planet, whether it's <a href="#projects"> digitalizing the collection of bird population data </a> or identifying energy infrastructures through computer vision.
                         Here are a few technologies I’ve been working with recently: The theme is open source, and you can use it for any purpose, personal or commercial.
@@ -72,7 +72,9 @@
                             <h4>Front End at Google</h4>
                             <p class="text-black-50 mb-0">Developed this portfolio, Implemented a web application that does X, Y and Z.</p>
                             <hr class="d-none d-lg-block mb-0 ml-0" />
-                            
+                            <div class="social d-flex justify-content-center">
+                                <a class="mx-2" href="https://www.linkedin.com/in/natalie-tarn"><i class="fab fa-linkedin-in"></i>/<a class="mx-2" href="mailto:tarn.natalie@gmail.com"><i class="fas fa-envelope"></i></a><a class="mx-2" href="https://github.com/ntarn"><i class="fab fa-github"></i></a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -156,12 +158,12 @@
                     </div>
                 </div>
                 <div class="social d-flex justify-content-center">
-                    <a class="mx-2" href="https://www.linkedin.com/in/natalie-tarn"><i class="fab fa-linkedin-in"></i>/a><a class="mx-2" href="mailto:tarn.natalie@gmail.com"><i class="fas fa-envelope"></i></a><a class="mx-2" href="https://github.com/ntarn"><i class="fab fa-github"></i></a>
+                    <a class="mx-2" href="https://www.linkedin.com/in/natalie-tarn"><i class="fab fa-linkedin-in"></i><a class="mx-2" href="mailto:tarn.natalie@gmail.com"><i class="fas fa-envelope"></i></a><a class="mx-2" href="https://github.com/ntarn"><i class="fab fa-github"></i></a>
                 </div>
             </div>
         </section>
         <!-- Footer-->
-        <footer class="footer bg-black small text-center text-white-50"><div class="container">Copyright © Your Website 2020</div></footer>
+        <footer class="footer bg-black small text-center text-white-50"><div class="container">Copyright © Natalie Tarn 2020</div></footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
