--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -13,6 +13,7 @@
         <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link href="css/customstyles.css" rel="stylesheet" />
         <link href="css/styles.css" rel="stylesheet" />
     </head>
@@ -53,9 +54,10 @@
                         </div> -->
                         <div class="pfpic"></div>
                         <h2 class="text-white mb-4">About Me</h2>
-                        <p class="text-white-50">I am a learner that grows in challenging work environments. I chose computer science and biology to help people and the planet, whether it's <a href="#projects"> digitalizing the collection of bird population data </a> or identifying energy infrastructures through computer vision.
-                        Here are a few technologies I’ve been working with recently: The theme is open source, and you can use it for any purpose, personal or commercial.
-                        asdfasdfasdfasdfasfd 
+                        <p class="text-white-50">I am a learner who grows in challenging work environments. I chose computer science and biology as my majors to help people and the planet, whether it's 
+                            <a href="#projects"> digitalizing the collection of bird population data </a> or identifying energy infrastructures through computer vision.
+                            Here are a few technologies I’ve been working with recently: The theme is open source, and you can use it for any purpose, personal or commercial.
+                            asdfasdfasdfasdfasfd 
                         </p>
                     </div>
                 </div>
@@ -72,8 +74,8 @@
                             <h4>Front End at Google</h4>
                             <p class="text-black-50 mb-0">Developed this portfolio, Implemented a web application that does X, Y and Z.</p>
                             <hr class="d-none d-lg-block mb-0 ml-0" />
-                            <div class="social d-flex justify-content-center">
-                                <a class="mx-2" href="https://www.linkedin.com/in/natalie-tarn"><i class="fab fa-linkedin-in"></i>/<a class="mx-2" href="mailto:tarn.natalie@gmail.com"><i class="fas fa-envelope"></i></a><a class="mx-2" href="https://github.com/ntarn"><i class="fab fa-github"></i></a>
+                            <div class="project-icons d-flex justify-content-start">
+                                <a href="https://github.com/ntarn"><i class="fab fa-github"></i></a>
                             </div>
                         </div>
                     </div>
