--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -139,6 +139,15 @@
                 </div>
             </div>
         </section> -->
+        <!-- Tutorial Section-->
+        <section>
+            <div id="content">
+            <h1>Testing</h1>
+            <p>Click here to see a Hello Natalie:</p>
+            <button onclick="getHelloNameUsingAsyncAwait()">Fetch a Hello Name!</button>
+            <div id="quote-container"></div>
+            </div>
+        </section>
         <!-- TODO: change links -->
         <!-- Contact-->
         <section class="contact-section bg-black" id="contact">
