testing JSON formatting and parsing

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -146,6 +146,7 @@
             <p>Click here to see a Hello Natalie:</p>
             <button onclick="getHelloNameUsingAsyncAwait()">Fetch a Hello Name!</button>
             <div id="quote-container"></div>
+            <div id="hardcode-messages"></div>
             </div>
         </section>
         <!-- TODO: change links -->
