in the process of fixing parsing json strings

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -142,11 +142,13 @@
         <!-- Tutorial Section-->
         <section>
             <div id="content">
-            <h1>Testing</h1>
-            <p>Click here to see a Hello Natalie:</p>
-            <button onclick="getHelloNameUsingAsyncAwait()">Fetch a Hello Name!</button>
-            <div id="quote-container"></div>
-            <div id="hardcode-messages"></div>
+                <h1>Testing</h1>
+                <p>Click here to see a Hello Natalie:</p>
+                 <button onclick="get()">Fetch a Hello Name!</button>
+                <div id="quote-container"></div>
+                <p>Click here to see a Hello Natalie:</p>
+                <button onclick="get()">Fetch a JSON string!</button>
+                <div id="quote-container"></div>
             </div>
         </section>
         <!-- TODO: change links -->
