--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -140,15 +140,15 @@
             </div>
         </section> -->
         <!-- Tutorial Section-->
-        <section>
+         <section>
             <div id="content">
                 <h1>Testing</h1>
                 <p>Click here to see a Hello Natalie:</p>
-                 <button onclick="get()">Fetch a Hello Name!</button>
+                 <button onclick="getHelloNameUsingAsyncAwait()">Fetch a Hello Name!</button>
                 <div id="quote-container"></div>
-                <p>Click here to see a Hello Natalie:</p>
-                <button onclick="get()">Fetch a JSON string!</button>
-                <div id="quote-container"></div>
+                <p>Click here to see a parsed JSON string:</p>
+                <button onclick="changeAListJson()">Fetch a JSON string!</button>
+                <div id="hardcode-messages"></div>
             </div>
         </section>
         <!-- TODO: change links -->
