add pictures to project section

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -49,10 +49,6 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 mx-auto">
-                        <!-- <div class="card">
-                            <img src="assets/img/NatalieTarnming.jpg" alt="Card Back">
-                            <img src="assets/img/NatalieTarnmin.jpg" class="img-top" alt="Card Front">
-                        </div> -->
                         <div class="pfpic"></div>
                         <h2 class="text-white mb-4">About Me</h2>
                         <p class="text-white-50">I am a learner who grows in challenging work environments. I chose computer science and biology as my majors to help people and the planet, whether it's 
@@ -91,7 +87,7 @@
                 <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
                     <div class="col-lg-6">
                         <div class="resizemobiletesting">
-                            <img class="img-fluid" src="assets/img/mobiletesting.svg" alt="" />
+                            <img class="img-fluid" src="assets/img/aicure.svg" alt="" />
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -111,7 +107,7 @@
                 <!-- TODO: add link to paper, replace image -->
                 <!-- Project Two Row-->
                 <div class="row justify-content-center no-gutters">
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/demo-image-02.jpg" alt="" /></div>
+                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/nlp.svg" alt="" /></div>
                     <div class="col-lg-6 order-lg-first">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
@@ -127,33 +123,9 @@
                 </div>
             </div>
         </section>
-        <!-- Might Reuse this code later on Signup-->
-        <!-- <section class="signup-section" id="signup">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-10 col-lg-8 mx-auto text-center">
-                        <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
-                        <h2 class="text-white mb-5">Subscribe to receive updates!</h2>
-                        <form class="form-inline d-flex"><input class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" type="email" placeholder="Enter email address..." /><button class="btn btn-primary mx-auto" type="submit">Subscribe</button></form>
-                    </div>
-                </div>
-            </div>
-        </section> -->
-        <!-- Tutorial Section-->
-         <section>
-            <div id="content">
-                <h1>Testing</h1>
-                <p>Click here to see a Hello Natalie:</p>
-                 <button onclick="getHelloNameUsingAsyncAwait()">Fetch a Hello Name!</button>
-                <div id="quote-container"></div>
-                <p>Click here to see a parsed JSON string:</p>
-                <button onclick="changeAListJson()">Fetch a JSON string!</button>
-                <div id="hardcode-messages"></div>
-            </div>
-        </section>
         <!-- TODO: change links -->
-        <!-- Contact-->
-        <section class="contact-section bg-black" id="contact">
+        <!-- Extended Projects-->
+        <section class="contact-section bg-light" id="">
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 mb-3 mb-md-0">
@@ -170,7 +142,7 @@
                     <div class="col-md-4 mb-3 mb-md-0">
                         <div class="card py-4 h-100">
                             <div class="card-body text-center">
-                                <i class="text-primary mb-2">
+                                <i class="fas fa-school text-primary mb-2">
                                     <!--TODO: Resize <img class="" src="assets/img/browser.svg" alt="" /> -->
                                 </i>
                                 <h4 class="text-uppercase m-0">Homework Helper</h4>
@@ -192,11 +164,36 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
+        <!-- Tutorial Section-->
+        <section class="contact-section bg-light" id="contact">
+            <div class="container">
+                <div class="row">
+                    <h1>Testing</h1>
+                    <p>Click here to see a Hello Natalie:</p>
+                    <button onclick="getHelloNameUsingAsyncAwait()">Fetch a Hello Name!</button>
+                    <div id="quote-container"></div>
+                    <p>Click here to see a parsed JSON string:</p>
+                    <button onclick="changeAListJson()">Fetch a JSON string!</button>
+                    <div id="hardcode-messages"></div>
+                </div>          
                 <div class="social d-flex justify-content-center">
                     <a class="mx-2" href="https://www.linkedin.com/in/natalie-tarn"><i class="fab fa-linkedin-in"></i><a class="mx-2" href="mailto:tarn.natalie@gmail.com"><i class="fas fa-envelope"></i></a><a class="mx-2" href="https://github.com/ntarn"><i class="fab fa-github"></i></a>
                 </div>
             </div>
         </section>
+        <!-- <section class="signup-section" id="signup">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-10 col-lg-8 mx-auto text-center">
+                        <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
+                        <h2 class="text-white mb-5">Subscribe to receive updates!</h2>
+                        <form class="form-inline d-flex"><input class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" type="email" placeholder="Enter email address..." /><button class="btn btn-primary mx-auto" type="submit">Subscribe</button></form>
+                    </div>
+                </div>
+            </div>
+        </section> -->
         <!-- Footer-->
         <footer class="footer bg-black small text-center text-white-50"><div class="container">Copyright © Natalie Tarn 2020</div></footer>
         <!-- Bootstrap core JS-->
