address some of Haylee's comments

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -43,13 +43,13 @@
                 </div>
             </div>
         </header>
-        <!-- TODO: add bullet point of technologies -->
+        <!-- TODO(ntarn):Add bullet point of technologies -->
         <!-- About-->
         <section class="about-section text-left" id="about">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 mx-auto">
-                        <div class="pfpic"></div>
+                        <div class="pf-pic"></div>
                         <h2 class="text-white mb-4">About Me</h2>
                         <p class="text-white-50">I am a learner who grows in challenging work environments. I chose computer science and biology as my majors to help people and the planet, whether it's 
                             <a href="#projects"> digitalizing the collection of bird population data </a> or identifying energy infrastructures through computer vision.
@@ -67,7 +67,7 @@
                 <!-- Featured Project Row-->
                 <div class="row align-items-center no-gutters mb-4 mb-lg-5">
                     <div class="col-xl-8 col-lg-7">
-                        <div class="resizewebappimg">
+                        <div class="webapp-img">
                             <img class="img-fluid mb-3 mb-lg-0" src="assets/img/webapps.svg" alt="" />
                         </div>
                         
@@ -86,7 +86,7 @@
                 <!-- Project One Row-->
                 <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
                     <div class="col-lg-6">
-                        <div class="resizemobiletesting">
+                        <div class="aicure-img">
                             <img class="img-fluid" src="assets/img/mobiletesting.svg" alt="" />
                         </div>
                     </div>
@@ -109,7 +109,7 @@
                 <div class="row justify-content-center no-gutters">
                     <div class="col-lg-6"><div style="padding-top:5rem;">
                         <div style="margin-left:5rem;margin-right:auto;">
-                            <img class="img-fluid resizenlp" src="assets/img/nlp.svg" alt="" />
+                            <img class="img-fluid nlp-img" src="assets/img/nlp.svg" alt="" />
                         </div>
                       </div></div>
                     <div class="col-lg-6 order-lg-first">
@@ -118,7 +118,7 @@
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
                                     <h4 class="text-white">CodaLab Competition: Sarcasm Detection</h4>
                                     <p class="mb-0 text-white-50">Implemented word, sentence-level embeddings, and attention LSTM models, ELMo embeddings with different classifiers using Python (keras, tensorflow) to detect sarcasm in tweets and Reddit posts, obtaining 8th place with a f1 score of 0.756
-                                        Paper will be published at the FigLang 2020 which includes literature about different word embeddings, transformers (BERT, ELMo), and additional classifiers that further improved performance</p>
+                                       Paper will be published at the FigLang 2020 which includes literature about different word embeddings, transformers (BERT, ELMo), and additional classifiers that further improved performance</p>
                                     <hr class="d-none d-lg-block mb-0 mr-0" />
                                 </div>
                             </div>
@@ -129,7 +129,7 @@
         </section>
         <!-- TODO: change links -->
         <!-- Extended Projects-->
-        <section class="contact-section bg-light" id="fixcontactmargin">
+        <section class="contact-section bg-light" id="contact-margin">
             <div class="container">
                 <div class="row">
                     <div class="col-md-4 mb-3 mb-md-0">
