address comments on project-section PR

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -60,7 +60,7 @@
                 </div>
             </div>
         </section>
-        <!-- TODO: change descriptions to bullet points -->
+        <!-- TODO(ntarn): Change descriptions to bullet points. -->
         <!-- Projects-->
         <section class="projects-section bg-light" id="projects">
             <div class="container">
@@ -104,7 +104,7 @@
                         </div>
                     </div>
                 </div>
-                <!-- TODO: add link to paper -->
+                <!-- TODO(ntarn): Add link to paper. -->
                 <!-- Project Two Row-->
                 <div class="row justify-content-center no-gutters">
                     <div class="col-lg-6"><div style="padding-top:5rem;">
@@ -127,7 +127,7 @@
                 </div>
             </div>
         </section>
-        <!-- TODO: change links -->
+        <!-- TODO(ntarn): Change links. -->
         <!-- Extended Projects-->
         <section class="contact-section bg-light" id="contact-margin">
             <div class="container">
@@ -147,7 +147,7 @@
                         <div class="card py-4 h-100">
                             <div class="card-body text-center">
                                 <i class="fas fa-school text-primary mb-2"></i>
-                                    <!-- TODO: Resize <img class="" src="assets/img/browser.svg" alt="" /> -->
+                                    <!-- TODO(ntarn): Resize <img class="" src="assets/img/browser.svg" alt="" /> -->
                                 <h4 class="text-uppercase m-0">Homework Helper</h4>
                                 <hr class="my-4" />
                                 <div class="small text-black-50">Website that generates study guides from notes</div>
