committing changes to address PR

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -69,8 +69,7 @@
                     <div class="col-xl-8 col-lg-7">
                         <div class="webapp-img">
                             <img class="img-fluid mb-3 mb-lg-0" src="assets/img/webapps.svg" alt="" />
-                        </div>
-                        
+                        </div> 
                     </div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
@@ -194,6 +193,8 @@
                     <div class="col-md-10 col-lg-8 mx-auto text-center">
                         <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
                         <h2 class="text-white mb-5">Get In Touch</h2>
+                        <form action="/subtraction-game" method="POST">
+                        
                         <form action="/data" class="form-inline d-flex" method="POST"><input class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" name="text-input" type="" placeholder="Enter email address and comment..." /><button class="btn btn-primary mx-auto" type="submit">Comment</button></form>
                         <div id="print-comments"></div>
                     </div>
